<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittextsearch"
        android:layout_width="378dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/tvlimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:text="@string/tvlimit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvlimitvalue"
        android:layout_width="35dp"
        android:layout_height="23dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="84dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarlimit"
        android:layout_width="293dp"
        android:layout_height="31dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:max="30"
        android:min="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonsearch"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="120dp"
        android:text="@string/buttonsearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonreset"
        android:layout_width="87dp"
        android:layout_height="42dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="116dp"
        android:text="@string/buttonreset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvsortby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="184dp"
        android:text="@string/tvsortby"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="184dp"
        android:text=""
        android:textOff="@string/switchprice"
        android:textOn="@string/switchdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="70dp"
        android:layout_height="26dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="224dp"
        android:text="@string/tvresult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvmusiclist"
        android:layout_width="391dp"
        android:layout_height="462dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="256dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="72dp"
        android:layout_height="90dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="248dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvloading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="280dp"
        android:text="@string/tvloading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvsortprice"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="184dp"
        android:text="Price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvsortdate"
        android:layout_width="36dp"
        android:layout_height="20dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="184dp"
        android:text="Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>