<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivmusicimg"
        android:layout_width="122dp"
        android:layout_height="120dp"
        android:layout_marginStart="136dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/tvtrack"
        android:layout_width="102dp"
        android:layout_height="22dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="136dp"
        android:text="@string/tvtrack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvgenre"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="184dp"
        android:text="@string/tvgenre"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvgenreval"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="184dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvartist"
        android:layout_width="55dp"
        android:layout_height="26dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="232dp"
        android:text="@string/tvartist"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvartistname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="232dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvalbum"
        android:layout_width="47dp"
        android:layout_height="22dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="280dp"
        android:text="@string/tvalbum"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvalbumname"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="280dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtrackprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="328dp"
        android:text="@string/tvtrackprice"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtrackpriceval"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="328dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvalbumprice"
        android:layout_width="88dp"
        android:layout_height="23dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="364dp"
        android:text="@string/tvalbumprice"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvalbumpriceval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="364dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtracktitle"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="136dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonfinish"
        android:layout_width="98dp"
        android:layout_height="36dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="408dp"
        android:text="Finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>